# hermespace

./: .gitignore  ABOUT.md  CONTRIBUTING.md  FOR_HERMES.md  INTEGRATION.md  LICENSE  README.md  SECURITY.md  WORKFLOW.md  pyproject.toml
docs/: 00-jspace-to-hermespace.md  01-architecture.md  02-integration-hermes.md  03-cross-exam-and-networks.md  04-pattern-matrix.md  05-desk-pane.md  06-component-research.md  07-cognitive-neuroscience.md  08-meta-brain-ai-reverse.md  09-agent-io-and-memory.md  10-jspace-claude.md  11-neural-space.md  12-local-model-neural.md  13-full-concept-research.md  14-workbench-pocket-dimension.md  15-hermes-ecosystem-fit.md  16-why-hermes-framework.md  17-skills-memory-bridge.md  18-autonomy-grid.md  18-tailscale-viewport.md  19-pocket-security-viewport.md  20-pulse-runtime.md  21-preupdate-hardening.md  22-open-roadmap.md  23-everyday-ops.md  24-comparative-analysis.md  25-context-optimization.md  26-benchmarks.md  HERMESCUBE.md  INDEX.md  RECOMMENDED.md  hermes-env.example.sh
experiments/: SMOKE_AGENT_API.json  SMOKE_RESULTS.json  comparative_benchmark.py  eval_harness.py  neural_rank_eval.py  results.tsv
hermes_plugin/: __init__.py  plugin.yaml
runtime/: ACTIVE.template.md
scripts/: doctor_desktop.sh  e2e_ops.sh  hs  install_desktop_plugin.sh  install_hermes.sh  install_pulse_timer.sh  new_desk.sh  security_audit.sh  show_desk.sh  smoke_test.sh
spec/: DESK.md  PROTOCOL.md
tests/: test_access_converse.py  test_agent_api.py  test_boundary_viewport.py  test_cognition.py  test_desk.py  test_environment.py  test_gate.py  test_grid.py  (+9 more)
(+56 files in other folders)
